2003-12-25  Per Bothner  <per@bothner.com>

	* module1.scm (namespace-syntax-test):  Specific timezone UTC so
	result is predictable.
	(obj-test.scm):  Update result from namespace-syntax-test.

2003-12-20  Per Bothner  <per@bothner.com>

	* obj-test.scm, classes1.scm:  Test new field initialization features.

2003-11-10  Per Bothner  <per@bothner.com>

	* testing.scm (report-fail):  Only use string-append if
	fail-expected is a string.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  Added string-append/shared tests

2003-11-05  Per Bothner  <per@bothner.com>

	* module3.scm, obj-test.scm:  Test define-variable syntax form.
	(dvar-test-1):  Add with-compile-options form.

2003-10-19  Per Bothner  <per@bothner.com>

	* num-test.scm:  New test from Sven.Hartrumpf@fernuni-hagen.de
	(10-17 "airth. expression crashes Kawa") plus 2 derived tests.

2003-10-08  Per Bothner  <per@bothner.com>

	Based on Savannah bug #5651 from Chris Dean <Chris.Dean@sokitomi.com>.
	* module3.scm (iarr-set):  New function.
	* obj-test.scm:  New test for primitive-array macros.

2003-09-11  Per Bothner  <per@bothner.com>

	* testing.scm (test):  Catch exception.
	* misc-test.scm:  New generic procedure tests. One is expected to fail.

2003-09-08  Per Bothner  <per@bothner.com>

	Based on Savannah bug #5113 from Chris Dean <Chris.Dean@sokitomi.com>.
	* module1.scm (namespace-syntax-test):  New macro.
	* module3.scm (namespace-syntax-call):  New function.
	* obj-test.scm:  Test namespace-syntax-call.

2003-08-20  Per Bothner  <per@bothner.com>

	* test.scm:  Merge in new tests from Aubrey Jaffer's latest version
	of r4rstest.scm.
	* num-test.scm:  6 new tests, mostly from Aubrey Jaffer.

2003-08-09  Per Bothner  <per@bothner.com>

	* classes1.scm (counter, get-new-count, <IdClass1>, <IdClass2>):  New
	Test for Savannah bug #4540.
	* obj-test.scm:  New tests.

	* classes1.scm (default-offset, <DateTest>):  New test, for
	non-simple class with captured context.